# lyceum-attendance

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
docs/: database.md  middlewares.md  tech-stack.md
docs/guides/: user.md
src/: main.py
src/db/: connector.py  db.py
src/db/models/: admins.py  base.py  forms.py  reports.py  users.py
src/db/schemas/: form.py  report.py  user.py
src/db/seriveces/: admins.py  forms.py  reports.py  users.py
src/handlers/: __init__.py  admin.py  auth.py  base.py  profile.py  report.py  start.py  test.py
src/middlewares/: admin.py  db.py
src/utils/: keyboards.py  reminder.py  spreedsheet.py  validators.py
